; ModuleID = '/home/carl/AnghaBench/postgres/src/port/extr_pgstrcasecmp.c_pg_toupper.c'
source_filename = "/home/carl/AnghaBench/postgres/src/port/extr_pgstrcasecmp.c_pg_toupper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local zeroext i8 @pg_toupper(i8 zeroext %0) #0 {
  %2 = alloca i8, align 1
  store i8 %0, i8* %2, align 1
  %3 = load i8, i8* %2, align 1
  %4 = zext i8 %3 to i32
  %5 = icmp sge i32 %4, 97
  br i1 %5, label %6, label %15

6:                                                ; preds = %1
  %7 = load i8, i8* %2, align 1
  %8 = zext i8 %7 to i32
  %9 = icmp sle i32 %8, 122
  br i1 %9, label %10, label %15

10:                                               ; preds = %6
  %11 = load i8, i8* %2, align 1
  %12 = zext i8 %11 to i32
  %13 = add nsw i32 %12, -32
  %14 = trunc i32 %13 to i8
  store i8 %14, i8* %2, align 1
  br label %27

15:                                               ; preds = %6, %1
  %16 = load i8, i8* %2, align 1
  %17 = call i64 @IS_HIGHBIT_SET(i8 zeroext %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %26

19:                                               ; preds = %15
  %20 = load i8, i8* %2, align 1
  %21 = call i64 @islower(i8 zeroext %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %19
  %24 = load i8, i8* %2, align 1
  %25 = call zeroext i8 @toupper(i8 zeroext %24)
  store i8 %25, i8* %2, align 1
  br label %26

26:                                               ; preds = %23, %19, %15
  br label %27

27:                                               ; preds = %26, %10
  %28 = load i8, i8* %2, align 1
  ret i8 %28
}

declare dso_local i64 @IS_HIGHBIT_SET(i8 zeroext) #1

declare dso_local i64 @islower(i8 zeroext) #1

declare dso_local zeroext i8 @toupper(i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
